--- a/index.html
+++ b/index.html
@@ -14,14 +14,32 @@
                 width:100vw;
                 margin: 0;
                 padding: 0;
+                
             }
 
             #content h1{
                 font-size: 10vw;
             }
+
+            #menuButton{
+                width:5vh;
+                height: 5vh;
+                font-size: 3.5vh;
+            }
+            
+            #header h1{
+                position: absolute;
+                top:-30vh;
+                left:19vw;
+                font-size: 400%;
+            }
         </style>
     </head>
     <body>
+        <div id="header">
+            <button id="menuButton">☰</button>
+            <h1>The Royal Ghostbusters</h1>
+        </div>
         <img id="homepageImage" src="homepage.jpg">
         <div id="content">
             <h1>Welcome to The Royal Ghostbusters!</h1>
