--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
             #content h1{
                 font-size: 10vw;
+                margin-left: 1%;
             }
 
             #menuButton{
@@ -57,6 +58,8 @@
 
             #interested h2{
                 font-size: 8vw;
+                margin-left: 1%;
+                margin-bottom: 1px;
             }
         </style>
     </head>
